--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,30 @@
+.traffic-light {
+    background-color: black;
+    display: inline-block;
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+}
 
-/* 
+.light {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.red {
+    background-color: red;
+}
 
-*/
+.orange {
+    background-color: orange;
+}
+
+.green {
+    background-color: green;
+}
+
+.glow {
+    box-shadow: 0px 0px 9px 4px yellow;
+}
